Improve documentation of JSON argument source (#621 / #631)
* mention that text blocks work
* reduce code snippet line length to max ~60, so they fit into the
  narrow code boxes on the website (i.e. no horizontal scroll bar)
* explain parser integration work:
	* so far only Jackson
	* optional dependency
	* force module resolution

Closes: #621
PR: #631